SERVER-31002 minValid should alway be set to existent OpTime.