src/mongo/db/repl/storage_interface.h
@@ -233,6 +233,19 @@ public:
                                 const NamespaceString& nss,
                                 const BSONObj& update) = 0;
 
+    /**
+     * Updates a singleton document in a collection. Never upsert.
+     *
+     * If the collection has more than 1 document, the update will only be performed on the first
+     * one found.
+     * Returns 'NamespaceNotFound' if the collection does not exist. This does not implicitly
+     * create the collection so that the caller can create the collection with any collection
+     * options they want (ex: capped, temp, collation, etc.).
+     */
+    virtual Status updateSingleton(OperationContext* opCtx,
+                                   const NamespaceString& nss,
+                                   const BSONObj& query,
+                                   const BSONObj& update) = 0;
 
     /**
      * Finds a single document in the collection referenced by the specified _id.
